<resources>
    <string name="app_name">CalcEx</string>
    <string name="tab_text_1">Calc</string>
    <string name="tab_text_2">BMI</string>
    <string name="welcome_text">Welcome to CalcEx!</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="div">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="mul">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="sub">-</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="clr">CLR</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="calculateBMI">Calculate BMI</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal weight</string>
    <string name="overweight">Pre-obesity</string>
    <string name="obese_class_i">Obesity class I</string>
    <string name="obese_class_ii">Obesity class II</string>
    <string name="obese_class_iii">Obesity class III</string>
    <string name="age">Age</string>
    <string name="calculateHBe">Calculate Harris–Benedict BMR</string>
    <string name="isWoman">Are you a woman?</string>
</resources>