<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalcFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="48sp"
        android:background="#e0e0e0"
        android:id="@+id/exprDisplay"
        android:gravity="center"
        android:maxLength="12"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp">

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnSeven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="input"
                android:text="@string/_7"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/btnEight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="input"
                android:text="@string/_8"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/btnNine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="input"
                android:text="@string/_9"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/btnDivide"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="input"
                android:text="@string/div"
                tools:ignore="OnClick" />
        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnFour"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="input"
                android:text="@string/_4"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/btnFive"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="input"
                android:text="@string/_5"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/btnSix"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="input"
                android:text="@string/_6"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/btnMultiply"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="input"
                android:text="@string/mul"
                tools:ignore="OnClick" />
        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnOne"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="input"
                android:text="@string/_1"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/btnTwo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="input"
                android:text="@string/_2"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/btnThree"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="input"
                android:text="@string/_3"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/btnSubtract"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="input"
                android:text="@string/sub"
                tools:ignore="OnClick" />
        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnDecimal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="input"
                android:text="@string/dot"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/btnZero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="input"
                android:text="@string/_0"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/btnClear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clear"
                android:text="@string/clr"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/btnAdd"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="input"
                android:text="@string/add"
                tools:ignore="OnClick" />
        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnEqual"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="compute"
                android:text="@string/equal"
                tools:ignore="OnClick" />
        </TableRow>
    </TableLayout>

</FrameLayout>
